# src/app/authentication/docs/swagger.yaml
@@ -34,6 +34,27 @@ definitions:
     - phoneNumber
     - username
     type: object
+  models.BFFSignInRequest:
+    properties:
+      password:
+        example: Secure@123
+        maxLength: 20
+        minLength: 8
+        type: string
+      username:
+        example: Arijit
+        maxLength: 32
+        minLength: 5
+        type: string
+    required:
+    - password
+    - username
+    type: object
+  models.BFFSignInResponse:
+    properties:
+      message:
+        type: string
+    type: object
   models.ErrorAPIResponse:
     properties:
       error:
@@ -51,6 +72,44 @@ definitions:
 info:
   contact: {}
 paths:
+  /api/auth/signin:
+    post:
+      consumes:
+      - application/json
+      description: Authenticates user and returns JWT token
+      parameters:
+      - description: User Sign In Request
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/models.BFFSignInRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Signin successful
+          schema:
+            $ref: '#/definitions/models.BFFSignInResponse'
+        "400":
+          description: Invalid input payload
+          schema:
+            $ref: '#/definitions/models.ErrorAPIResponse'
+        "401":
+          description: Invalid credentials
+          schema:
+            $ref: '#/definitions/models.ErrorAPIResponse'
+        "409":
+          description: User does not exist
+          schema:
+            $ref: '#/definitions/models.ErrorAPIResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.ErrorAPIResponse'
+      summary: Sign in an existing user
+      tags:
+      - User
   /api/auth/signup:
     post:
       consumes:
