# src/app/authentication/models/signinModel.go
@@ -1,0 +1,10 @@
+package models
+
+type BFFSignInRequest struct {
+	Username string `json:"username" example:"Arijit" validate:"required,min=5,max=32"`
+	Password string `json:"password" example:"Secure@123" validate:"required,min=8,strongPassword,max=20"`
+}
+
+type BFFSignInResponse struct {
+	Message string `json:"message"`
+}
